--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@
 .toc
 .synctex
 .synctex.gz
+model_fitting.RData
+LaTeX/microbusiness-forecasting.synctex.gz
+LaTeX/microbusiness-forecasting.blg
+LaTeX/microbusiness-forecasting.log
+LaTeX/microbusiness-forecasting.aux
+LaTeX/microbusiness-forecasting.out
+LaTeX/microbusiness-forecasting.synctex.gz
+LaTeX/microbusiness-forecasting.synctex.gz
+*.gz
