--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
 .Rproj.user
 .Rhistory
 .RData
+.RDataTmp
 .Ruserdata
+.log
+.out
+.aux
+.blg
+.bbl
+.toc
+.synctex
+.synctex.gz
+model_fitting.RData
+LaTeX/microbusiness-forecasting.synctex.gz
+LaTeX/microbusiness-forecasting.blg
+LaTeX/microbusiness-forecasting.log
+LaTeX/microbusiness-forecasting.aux
+LaTeX/microbusiness-forecasting.out
+LaTeX/microbusiness-forecasting.synctex.gz
+LaTeX/microbusiness-forecasting.synctex.gz
+*.gz
 .aux
